# ChangeLog for sys-power/cpufreqd
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/cpufreqd/ChangeLog,v 1.48 2007/03/13 16:53:43 phreak Exp $

  13 Mar 2007; Christian Heim <phreak@gentoo.org>
  +files/cpufreqd-conf.d.patch, cpufreqd-2.2.0-r2.ebuild,
  cpufreqd-2.2.1.ebuild:
  Fixing the "movie" rule of cpufreqd. Thanks to Matthew Schultz <mattsch at
  gmail.com> in #169334.

  30 Nov 2006; Piotr Jaroszyński <peper@gentoo.org> cpufreqd-2.2.1.ebuild:
  No need to sed the config any more, thanks to Alon Bar-Lev
  <alonbl@gentoo.org>, bug #156096.

*cpufreqd-2.2.1 (30 Nov 2006)

  30 Nov 2006; Piotr Jaroszyński <peper@gentoo.org>
  +files/cpufreqd-2.2.1-init.d, +cpufreqd-2.2.1.ebuild:
  Version bump.

  30 Nov 2006; Piotr Jaroszyński <peper@gentoo.org>
  -files/cpufreqd-2.0.0-init.d, -files/cpufreqd-2.1.0-init.d,
  -cpufreqd-1.2.3.ebuild, -cpufreqd-2.0.0.ebuild, -cpufreqd-2.1.0.ebuild:
  Remove old versions.

  13 Nov 2006; Joseph Jezak <josejx@gentoo.org> cpufreqd-2.1.1.ebuild:
  Marked ppc stable for bug #153260.

  04 Nov 2006; Danny van Dyk <kugelfang@gentoo.org> cpufreqd-2.1.1.ebuild:
  Marked stable on amd64.

  29 Oct 2006; Andrej Kacian <ticho@gentoo.org> cpufreqd-2.1.1.ebuild:
  Stable on x86, bug #153260.

  24 Oct 2006; Piotr Jaroszyński <peper@gentoo.org>
  files/cpufreqd-2.2.0-init.d:
  Fixed the init script to start if at least one cpu supports freq scaling.

*cpufreqd-2.2.0-r2 (22 Oct 2006)

  22 Oct 2006; Christian Heim <phreak@gentoo.org>
  -files/cpufreqd-2.2.0-Makefile.am.patch, files/cpufreqd-2.2.0-init.d,
  -cpufreqd-2.2.0-r1.ebuild, +cpufreqd-2.2.0-r2.ebuild:
  Another revision bump, seems my initial intention (the one in #152096)
  wasn't that good. Reverting my changes. Furthermore, seems like I missed to
  add automake to the DEPEND, #152290 (thanks to t35t0r <t35t0r at
  gmail.com>).

*cpufreqd-2.2.0-r1 (20 Oct 2006)

  20 Oct 2006; Christian Heim <phreak@gentoo.org>